# python-project-lvl2

./: .coverage  .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: check-lint.yml  ci.yml
gendiff/: __init__.py  parser.py  pyproject.toml
gendiff/scripts/: __init__.py  gendiff.py
tests/: test_gendiff.py
tests/fixtures/: generate_diff.txt
